Chapter 6 done baby! Wearing purple, awaiting corrections.

--- a/0_frontmatter/glossary.tex
+++ b/0_frontmatter/glossary.tex
@@ -20,6 +20,7 @@
 \item[KGC]{Knowledge Graph Completion}
 \item[KGE]{Knowledge Graph Embedding(s)}
 \item[MAS]{Multi-Agent System}
+\item[MRR]{Mean Reciprocal Rank}
 \item[NER]{Named Entity Recognition}
 \item[NLP]{Natural Language Processing}
 \item[OOKB]{Out-of-Knowledge-Base}
