--- a/4_kbsintegrationdl/kbsintegrationdl.tex
+++ b/4_kbsintegrationdl/kbsintegrationdl.tex
@@ -193,7 +193,7 @@ The proposed initialization approach is model-agnostic, and can subsequently be 
 
 Bilinear models base their predictions on the exploitation of latent semantics and implicit correlations between elements. Enriching the semantic information available to the model during training time can potentially be translated into an improvement on its performance. Moreover, the inclusion of ontological information can add an exploratory layer to KGE models in addition to their exploitative behavior.
 
-\subsection{Semantic-Based Initialization Evaluation}\label{4_sec:experiments}
+\subsection{Evaluation}\label{4_sec:experiments}
 %%AQUI EXPLICAMOS YA LOS MODELOS EXACTOS SOBRE LOS QUE SE EVALUA Y LOS DATASETES
 \begin{table}[h]
 \resizebox{\linewidth}{!}{
