--- a/4_kbsintegrationdl/kbsintegrationdl.tex
+++ b/4_kbsintegrationdl/kbsintegrationdl.tex
@@ -1,4 +1,4 @@
-\chapter{Knowledge-Based System Integration into a Deep Learning Environment}\label{chap:kbsintegrationdl}
+\chapter{Knowledge-Based System Introduction into a Deep Learning Environment}\label{chap:kbsintegrationdl}
 
 %Motivaciones de esto: Incrementar capacidad de generalización, reducir número de recursos, aumento de la interpretabilidad del modelo. Restricciones de esto: 
 This chapter focuses the first of the integrations contemplated in this thesis: the insertion of knowledge-based systems in deep learning models. Section \ref{4_sec:methodology_kbs_intro_dl} outlines the specific method parameters of this integration, along with the relations between them. This design is then materialized into a hybrid proposal for KGC. KGC is one of the main fields of application of neurosymbolic approaches, as it provides a propitious scenario where both symbolic and subsymbolic approaches are suitable. This chapter presents a semantic-based initialization approach, which can be combined with any KGE model, subsequently generating a hybrid approach. Section \ref{4_sec:ontointro_kgc} outlines the motivation and overview of the proposed initialization, presented Section \ref{4_sec:semantic_initialization}. Section \ref{4_sec:experiments} presents the different experiments conducted to validate the proposal, as well as the achieved results, which are discussed in Section \ref{4_sec:results}. Section \ref{4_sec:method_assessment} frames the presented use case in the context of the general design method, providing insights on the specific parameter values. Section \ref{4_sec:summary} summarizes the content of the chapter. \blfootnote{The content of this chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., Hohenecker, P., \& Lukasiewicz, T. (2021). An ontology-based deep learning approach for triple classification with out-of-knowledge-base entities. Information Sciences, 564, 85–102. doi:10.1016/j.ins.2021.02.018}
