--- a/7_conclusions/conclusions.tex
+++ b/7_conclusions/conclusions.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusions}
 \label{chap:conc}
-
+TBD
 \section{Conclusions}
 
 
@@ -8,5 +8,7 @@
 %%AQUI VAN TODOS LOS PAPERS, SOFTWARE (ANEXOS) Y ESTANCIA
 
 \section{Future Work}
-
+%%Más a nivel de recursos
 %%EXTENDING GENI
+
+%%Ofrecer un recomendador que dados los parametros y uno de los paradigmas te recomiende el paradigma complementario que mejor se ajuste
