--- a/Thesis.tex
+++ b/Thesis.tex
@@ -533,7 +533,7 @@ EL PRESIDENTE \hspace{30mm} VOCAL 1 \hspace{30mm} VOCAL 2
 
 \listoftables  % print list of tables
 
-\listofalgorithms % Print list of algorithms
+%\listofalgorithms % Print list of algorithms
 
 
 %: ----------------------- glossary ------------------------
@@ -594,9 +594,7 @@ EL PRESIDENTE \hspace{30mm} VOCAL 1 \hspace{30mm} VOCAL 2
 
 \input{6_kbsextractiondl/kbsextractiondl}
 
-% \input{7_kgconstruction/construction}
-
-% \input{8_conclusions/conclusions}
+\input{7_conclusions/conclusions}
 
 % \appendix
 % \include{appendix/appendix1}
